@@ -1,48 +1,11 @@
-# TODO List for Project Reorganization and Running
+# TODO List for Data Retrieval on Startup
 
-- [x] Create standard Maven-like directory structure:
-  - src/main/java/ for Java source files
-  - src/main/resources/ for resources (e.g., DB files)
-  - target/classes/ for compiled classes
-
-- [x] Move all source files from SRC/com/ to src/main/java/com/
-
-- [x] Move DB/ directory contents to src/main/resources/DB/
-
-- [x] Move compiled classes from Compiled Files/com/ to target/classes/com/
-
-- [x] Update README.md and TODO.md to reflect new structure and build/run instructions
-
-- [x] Compile all Java files with JavaFX SDK classpath from src/main/java/ to target/classes/
-
-- [x] Run the JavaFX application from target/classes/ with JavaFX SDK
-
-- [x] Verify the application runs correctly
-
-## Testing Results
-
-### Compilation Testing
-- ✅ All Java source files compiled successfully without errors
-- ✅ JavaFX modules properly configured (--module-path and --add-modules)
-- ✅ Class files generated in target/classes/ directory
-
-### Runtime Testing
-- ✅ Application launches successfully
-- ✅ JavaFX GUI initializes properly
-- ✅ No critical runtime errors observed
-- ✅ Application runs in background as expected
-
-### Structure Testing
-- ✅ Standard Maven-like directory structure implemented
-- ✅ Source files organized in src/main/java/com/
-- ✅ Compiled classes in target/classes/com/
-- ✅ JavaFX SDK properly referenced
-- ✅ Build and run instructions updated in README.md
-
-### Thorough Testing Summary
-The project has been successfully reorganized into a standard structure and thoroughly tested:
-- All source files are properly organized
-- Compilation completes without errors
-- Application runs successfully with JavaFX
-- Directory structure follows best practices
-- Documentation updated with current build/run instructions
+- [x] Add static method in Customer.java to load customers from DB/customers.txt
+- [x] Modify MainApp.java to load customers on startup before UI setup
+- [x] Test that previously stored customers are loaded when app starts
+- [x] Add static method in Shop.java to load shops from DB/shops.txt
+- [x] Modify MainApp.java to load shops on startup before UI setup
+- [x] Add static method in Product.java to load products from DB/products.txt
+- [x] Modify MainApp.java to load products on startup and assign to shops
+- [x] Modify MainApp.java to save shop data when a new shop is added
+- [x] Test that previously stored shops and products are loaded and displayed correctly on startup
